@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -145,7 +145,8 @@ public class NewsAddress extends Address {
 	    return false;
 
 	NewsAddress s = (NewsAddress)a;
-	return newsgroup.equals(s.newsgroup) &&
+	return ((newsgroup == null && s.newsgroup == null) ||
+	     (newsgroup != null && newsgroup.equals(s.newsgroup))) &&
 	    ((host == null && s.host == null) ||
 	     (host != null && s.host != null && host.equalsIgnoreCase(s.host)));
     }
